--- a/.github/workflows/composer-require-check.yml
+++ b/.github/workflows/composer-require-check.yml
@@ -43,7 +43,7 @@ jobs:
           php-version: '${{ inputs.php-version }}'
           extensions: '${{ inputs.php-extensions }}'
           ini-values: memory_limit=-1
-          tools: composer, composer-require-checker
+          tools: composer:v2, composer-require-checker
           coverage: none
 
       - name: 'Setup problem matchers for PHP (aka PHP error logs)'
@@ -53,7 +53,7 @@ jobs:
         run: 'echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"'
 
       - name: 'Install PHP dependencies with Composer'
-        run: composer install --prefer-dist --no-progress --no-suggest --optimize-autoloader
+        run: composer install --prefer-dist --no-progress --no-dev --optimize-autoloader
         working-directory: './'
 
       - name: 'Check composer required packages'
