add tests, coveralls and some fixes

--- a/.github/workflows/composer-unused-check.yml
+++ b/.github/workflows/composer-unused-check.yml
@@ -57,4 +57,5 @@ jobs:
         working-directory: './'
 
       - name: 'Check composer unused packages'
+        working-directory: './'
         run: composer-unused
