--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -13,6 +13,10 @@ on:
         type: string
         required: false
         default: 'cache-v1'
+      psalm-config:
+        type: string
+        required: false
+        default: psalm.xml
 
 jobs:
   analyze:
@@ -43,7 +47,7 @@ jobs:
           php-version: '${{ inputs.php-version }}'
           extensions: '${{ inputs.php-extensions }}'
           ini-values: memory_limit=-1
-          tools: composer:v2
+          tools: composer:v2, psalm:5
           coverage: none
 
       - name: 'Setup problem matchers for PHP (aka PHP error logs)'
@@ -57,4 +61,11 @@ jobs:
         working-directory: './'
 
       - name: 'Analyze PHP source files'
-        run: 'composer analyze-${{ inputs.php-version }}'
+        working-directory: './'
+        run: |
+          if [ -f "${{ inputs.psalm-config }}" ]
+          then
+            psalm --php-version=${{ inputs.php-version }} --config=${{ inputs.psalm-config }} --output-format=github --shepherd
+          else
+            psalm --php-version=${{ inputs.php-version }} --output-format=github --shepherd
+          fi
