--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Composer require check
+name: Tests
 
 on:
   workflow_call:
@@ -13,9 +13,13 @@ on:
         type: string
         required: false
         default: 'cache-v1'
+      phpunit-config:
+        type: string
+        required: false
+        default: phpunit.xml
 
 jobs:
-  composer-require-check:
+  tests:
     runs-on: 'ubuntu-latest'
     timeout-minutes: 20
     steps:
@@ -43,8 +47,8 @@ jobs:
           php-version: '${{ inputs.php-version }}'
           extensions: '${{ inputs.php-extensions }}'
           ini-values: memory_limit=-1
-          tools: composer:v2, composer-require-checker
-          coverage: none
+          tools: composer:v2
+          coverage: pcov
 
       - name: 'Setup problem matchers for PHP (aka PHP error logs)'
         run: 'echo "::add-matcher::${{ runner.tool_cache }}/php.json"'
@@ -53,9 +57,25 @@ jobs:
         run: 'echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"'
 
       - name: 'Install PHP dependencies with Composer'
-        run: composer install --prefer-dist --no-progress --no-dev --optimize-autoloader
+        run: composer install --prefer-dist --no-progress --optimize-autoloader
         working-directory: './'
 
-      - name: 'Check composer required packages'
+      - name: 'Run tests'
         working-directory: './'
-        run: composer-require-checker
+        run: |
+          if [ -f "${{ inputs.phpunit-config }}" ]
+          then
+            ./vendor/bin/phpunit --stderr -c ${{ inputs.phpunit-config }} --coverage-clover build/logs/clover.xml
+          else
+            ./vendor/bin/phpunit --stderr --coverage-clover build/logs/clover.xml
+          fi
+          
+      - name: 'Upload coverage results to Coveralls'
+        working-directory: './'
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_PARALLEL: true
+          COVERALLS_FLAG_NAME: php-${{ inputs.php-version }}
+        run: |
+          composer global require php-coveralls/php-coveralls
+          php-coveralls --coverage_clover=build/logs/clover.xml -v
